[package]
name = "hifive-flashloader"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-never  = "0.1.0"
panic-halt   = "0.2.0"
e310x    = { version = "0.8.1", features = ["g002"] }
embedded-hal = "0.2.3"
riscv        = "0.5.3"
# hifive1 = {version = "0.8.1", features = ["board-hifive1-revb"]}


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
